# astro3d

./: .gitignore  .travis.yml  LICENSE.rst  MANIFEST.in  README.md  README.rst  braille.py  p3d.py  pyproject.toml  setup.cfg  setup.py  texture.py  tox.ini
.github/workflows/: ci_tests.yml
3dimage-stl/: astroObjects.py  astroVisual.py  astroWidgets.py  star_scenes.py  wizard.py
3dimage-stl/img2stl/: 3dModelCreator.py  image_loader.py  imageprep.py  imageutils.py  meshcreator.py  texture.py
Perry's Work/: README.md  batch.py  sphere.py  stl.py
astro3d/: __init__.py  app.py  conftest.py  image_utils.py  meshes.py  model3d.py  region_mask.py  texture_examples.py  textures.py
astro3d/core/: image_utils.py  meshes.py  model3d.py  region_mask.py  textures.py
astro3d/data/: astro3d.cfg  text_catalog.yaml
astro3d/gui/: __init__.py  astroObjects.py  astroVisual.py  config.py  controller.py  core.py  example1_qt.py  helps.py  items.py  model.py  signals.py  star_scenes.py  start_ui_app.py  store_widgets.py  textures.py  util.py  utils.py  viewer.py  wizard.py
astro3d/gui/qt/: __init__.py  image_view.py  info_box.py  items.py  layer_manager.py  overlay.py  parameters.py  preferences.py  process.py  pyqt_nonblock.py  shape_editor.py  util.py  view_instruction.py  view_mesh.py
astro3d/gui/qt4/: __init__.py  image_view.py  info_box.py  items.py  layer_manager.py  overlay.py  parameters.py  preferences.py  process.py  pyqt_nonblock.py  shape_editor.py  util.py  view_image.py  view_mesh.py
astro3d/scripts/: convert_textures.py
astro3d/tests/: test_model3d.py
astro3d/util/: __init__.py  logger.py  process.py  signal_slot.py  text_catalog.py
astro3d/util/tests/: test_text_catalog.py
astro3d/utils/: imageprep.py  imageutils.py  imutils.py  meshcreator.py  model3d.py  texture.py  textures.py
docs/: Makefile  conf.py  high-level_API.rst  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.txt
docs/astro3d/: high-level_API.rst
docs/source/: api.rst  conf.py  index.rst
scripts/: astro3d  astro3dgui  convert_textures
