[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astro3d
description = Create a 3D model from an astronomical image.
long_description = Create a 3D model from an astronomical image.
author = STScI
author_email = help@stsci.edu
license = BSD
url = https://github.com/STScI-SSB/astro3d
edit_on_github = False
github_project = STScI-SSB/astro3d

[entry_points]
astro3d = astro3d.app:main
