[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
# doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = astro3d
description = Create a 3D model from an astronomical image.
long_description = Create a 3D model from an astronomical image.
author = STScI
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/astro3d
edit_on_github = False
github_project = spacetelescope/astro3d
install_requires = astropy, attrdict, ginga, numpy, photutils, Pillow, qtpy, scipy, six, vispy
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.4.dev
package_data = {'': 'astro3d.cfg'}

[entry_points]
astro3d = astro3d.app:main
