[metadata]
name = astro3d
author = STScI
author_email = help@stsci.edu
url = https://github.com/spacetelescope/astro3d
github_project = spacetelescope/astro3d
edit_on_github = False
description = Create a 3D model from an astronomical image.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, astrophysics, 3D printing

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy>=4.0
    attrdict3
    ginga
    numpy>=1.17
    photutils
    Pillow
    pyqt5-tools
    PyYAML
    qtpy
    scipy
    six
    vispy

[options.entry_points]
console_scripts =
    astro3d = astro3d.app:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
astro3d = data/*

[tool:pytest]
testpaths = "astro3d" "docs"
astropy_header = true
# doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astro3d/_astropy_init*
    astro3d/conftest.py
    astro3d/*setup_package*
    astro3d/tests/*
    astro3d/*/tests/*
    astro3d/extern/*
    astro3d/version*
    */astro3d/_astropy_init*
    */astro3d/conftest.py
    */astro3d/*setup_package*
    */astro3d/tests/*
    */astro3d/*/tests/*
    */astro3d/extern/*
    */astro3d/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
